@@ -1,22 +1,23 @@
 package com.neurelpress.blogs.config;
 
+import com.neurelpress.blogs.dto.properties.NeuralPressCorsProperties;
+import com.neurelpress.blogs.constants.ApiConstants;
 import com.neurelpress.blogs.security.jwt.JwtAuthenticationFilter;
 import com.neurelpress.blogs.security.oauth2.OAuth2AuthenticationSuccessHandler;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
@@ -25,6 +26,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+
 
 @Configuration
 @EnableMethodSecurity
@@ -35,30 +37,29 @@ public class SecurityConfiguration {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     @Lazy
     private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
-
-    @Value("${neuralpress.cors.allowed-origins}")
-    private String allowedOrigins;
+    private final NeuralPressCorsProperties corsProperties;
 
     @Bean
     public SecurityFilterChain securityFilterChain(
             HttpSecurity http,
-            CorsConfigurationSource corsConfigurationSource,
             ObjectProvider<ClientRegistrationRepository> clientRegistrationRepositoryProvider
     ) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(authorizationManagerRequestMatcherRegistry -> authorizationManagerRequestMatcherRegistry
-                        .requestMatchers("/api/auth/**").permitAll()
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(ApiConstants.Api_Auth + "/**").permitAll()
                         .requestMatchers("/oauth2/**", "/login/oauth2/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/articles/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/tags/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/books/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/quotes/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/trending/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/users/*/profile").permitAll()
-                        .requestMatchers("/api/feed/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Articles + "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Tags + "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Books + "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Quotes + "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Trending + "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, ApiConstants.Api_Users + "/*/profile").permitAll()
+                        .requestMatchers(ApiConstants.Api_Feed + "/**").permitAll()
+                        .requestMatchers(ApiConstants.Api_Analytics + ApiConstants.Track,
+                                ApiConstants.Api_Analytics + ApiConstants.Crash).permitAll()
                         .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
                         .requestMatchers("/actuator/**").permitAll()
                         .requestMatchers("/api/health/**").permitAll()
@@ -67,9 +68,7 @@ public class SecurityConfiguration {
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         if (clientRegistrationRepositoryProvider.getIfAvailable() != null) {
-            http.oauth2Login(oAuth2Auth -> oAuth2Auth
-                    .successHandler(oAuth2AuthenticationSuccessHandler)
-            );
+            http.oauth2Login(oauth -> oauth.successHandler(oAuth2AuthenticationSuccessHandler));
         }
 
         return http.build();
@@ -77,20 +76,21 @@ public class SecurityConfiguration {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        corsConfiguration.setAllowedHeaders(List.of("*"));
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setMaxAge(3600L);
+        CorsConfiguration cors = new CorsConfiguration();
+        cors.setAllowedOrigins(Arrays.asList(corsProperties.cors().allowedOriginsArray()));
+        cors.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        cors.setAllowedHeaders(List.of("*"));
+        cors.setExposedHeaders(List.of("Authorization"));
+        cors.setAllowCredentials(true);
+        cors.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfiguration);
+        source.registerCorsConfiguration("/**", cors);
         return source;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
+        return cfg.getAuthenticationManager();
     }
 }
